valentino-web.yaml
apiVersion: v1
kind: Pod
metadata: 
  labels: 
    app: valentino-webserver
  name: valentino-webserver
spec: 
  containers: 
    - 
      image: "valentinod/node-webserver:latest"
      name: webserver

---

kind: Service
apiVersion: v1
metadata:
  name: valentino-webserver-service
spec:
  selector:
    app: valentino-webserver 
  ports:
    - port: 8080
