web-server.yaml
apiVersion: v1
kind: Pod
metadata: 
  labels: 
    app: webserver
  name: webserver
spec: 
  containers: 
    - 
      image: valentinod/node-webserver
      name: webserver

---

kind: Service
apiVersion: v1
metadata:
  name: webserver-service
spec:
  selector:
    app: webserver 
  ports:
    - port: 8080
