ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-world.loc
    http:
      paths:
      - path: /
        backend:
          serviceName: webserver-service 
          servicePort: 8080
  - host: valentino.hello-world.loc
    http:
      paths:
      - path: /
        backend:
          serviceName: valentino-webserver-service
          servicePort: 8080
      - path: /pods
        backend:
          serviceName: valentino-webserver-service
          servicePort: 8090
